# Manas-task-phase

./: .gitignore  README.md
task phase 2/: linear_regression.ipynb  logistic_regression.ipynb
task phase 3/: clustering.ipynb  decision_tree.ipynb
task phase 4/: cnn.ipynb  numpy_mlp_adam.ipynb  task4_1_cnn.ipynb
task phase 5/: README.md  activate_map_server.sh  build_in_docker.sh  install_ros2_humble.sh  install_ros2_jazzy.sh  install_rviz_map_server.sh  run_astar_planner.sh  run_chat_listener.sh  run_chat_talker.sh  run_map_server.sh  run_rviz_task5.sh  run_task5.sh  setup_linux_vm.sh
task phase 5/astar_planner/: CMakeLists.txt  package.xml
task phase 5/astar_planner/src/: astar_planner_node.cpp
task phase 5/chat_interface/: CMakeLists.txt  package.xml
task phase 5/chat_interface/src/: listener.cpp  talker.cpp
task phase 5/maps/: map_basic.yaml  map_lv2.yaml  map_lv3.yaml
task phase 6/: prepare_ball_dataset.py  train_ball_detector.py  volleyball_tracker_v3.py
task phase 6/datasets/: ball_dataset.yaml
task phase 7/: README.md  run_task7.sh  setup_linux_vm.sh
task phase 7/task7_nav2_demo/: CMakeLists.txt  package.xml
task phase 7/task7_nav2_demo/config/: snack_locations.yaml
task phase 7/task7_nav2_demo/launch/: gazebo_world.launch.py  nav2_rviz.launch.py
task phase 8/: .dockerignore  Dockerfile  PHASES.md  README.md  build_ws.sh  compose.yaml  run_phase0.sh  run_task8.sh  shell_task8.sh  smoke_test.sh  stop_task8.sh
task phase 8/config/rviz/: task8_humble.rviz  task8_phase0_vo.rviz
task phase 8/scripts/: common.sh  print_runtime_snapshot.sh  profile_task8_ros.sh  run_rviz.sh  smoke_demo.sh  task8-supervisord.conf  task8_ros.sh
task phase 8/ws/src/monocular_vo/: package.xml  setup.cfg  setup.py
task phase 8/ws/src/monocular_vo/config/: vo.yaml
task phase 8/ws/src/monocular_vo/launch/: vo.launch.py
task phase 8/ws/src/monocular_vo/monocular_vo/: __init__.py  frontend.py  geometry.py  io.py  local_map.py  pose_integration.py  scale.py  scale_sanity.py  video_bridge.py  vo_node.py
task phase 8/ws/src/monocular_vo/resource/: monocular_vo
tp6/: README.md  volleyball_tracker_opencv.py  volleyball_tracker_opencv_v2.py  volleyball_tracker_opencv_v3.py  volleyball_tracker_opencv_v4.py  volleyball_tracker_opencv_v5.py  volleyball_tracker_opencv_v6.py  volleyball_tracker_opencv_v9.py
