<?xml version="1.0"?>
<package format="3">
  <name>monocular_vo</name>
  <version>0.0.1</version>
  <description>Phase 1 baseline for Task 8 dashcam monocular visual odometry.</description>

  <maintainer email="sooryas@local.dev">sooryas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
